# hackathones

./: .gitignore  CLAUDE.md  vercel.json
.github/ISSUE_TEMPLATE/: hackathon.yml  lfg.yml
.github/workflows/: deploy.yml  ingest.yml  rebuild-on-issue.yml  scrape.yml
scraper/: pyproject.toml
scraper/src/: cli.py  config.py  models.py
scraper/src/processing/: deduplicator.py  normalizer.py  parser.py
scraper/src/scrapers/: base.py  luma.py  twitter.py
scraper/tests/: test_deduplicator.py  test_normalizer.py  test_parser.py
scripts/: copy-data.sh  full-pipeline.sh
supabase/migrations/: 20260411180000_add_devpost_to_source_enum.sql  20260413120000_enable_rls.sql  20260413200000_lock_function_search_path.sql  20260413200100_drop_admin_policies.sql
web/: astro.config.mjs  package.json  pnpm-lock.yaml
web/scripts/: ingest.mjs
web/src/: content.config.ts
web/src/components/: AsciiTorus.tsx  FilterBar.astro  Footer.astro  HackathonCard.astro  HackathonList.astro  IntroLoader.tsx  Terminal.astro  TerminalHeader.astro
web/src/components/loader-variants/: IntroSparkle.tsx  SparkleBlend.tsx  SparkleDrei.tsx  SparkleEtch.tsx  SparkleField.tsx  SparkleFieldEtch.tsx  SparkleShader.tsx  shared.tsx
web/src/data/: hackathons.json
web/src/i18n/: en.json  es.json  index.ts  pt.json
web/src/layouts/: BaseLayout.astro
web/src/lib/: supabase.ts
web/src/pages/: index.astro  loader-logo.astro  submit.astro
web/src/pages/es/: index.astro
web/src/pages/pt/: index.astro
web/src/styles/: global.css  variables.css
